--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
     				<div class="col-lg">
     					<img src="assets/car.png"  class="float-left">
     					<h4>Vehicle</h4>
-    					<p>Private driver to take you anywhere</p>
+    					<p>Private driver to take you anywhere.</p>
     				</div>
     				<div class="col-lg">
     					<img src="assets/photographer.png"  class="float-left">
     					<h4>Photographer</h4>
-    					<p>professional photographer to capture your moments</p>
+    					<p>Professional photographer to capture your moments.</p>
     				</div>
     				<div class="col-lg">
     					<img src="assets/restaurant.png" class="float-left">
     					<h4>Restaurant</h4>
-    					<p>food served by five star chefs restaurant</p>
+    					<p>Food served by five star chefs restaurant.</p>
     				</div>
     			</div>
     			
